python-practice-main/aa.txt
  File "test.py", line 12
    
             ^
SyntaxError: unexpected EOF while parsing
